# sensors-pub

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Dockerfile.crossbuild  README.md  config.sample.yml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: cicd.yml  docker.yml
src/: config.rs  lib.rs  main.rs
src/publisher/: mod.rs  stdout_publisher.rs
src/publisher/mqtt/: ha_discovery.rs  mod.rs  mqtt_publisher.rs
src/sensor/: am2320.rs  ds18b20.rs  faker.rs  measure.rs  mod.rs
